# scrapy-item-pipelines

./: .flake8  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
scrapy_item_pipelines/: __init__.py  misc.py  streaming.py
